--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,17 +1,17 @@
 <li class="movie__list_item" [class.more]="open">
-  <img [src]="data.backdrop_path" alt="{{data.title}}" class="movie__list_image">
-  <div class="movie__info">
-    <h2 class="movie__list_title">{{data.title}}</h2>
-    <p class="movie__list_text overview">{{data.overview}}</p>
-    <p class="movie__list_text">Release date {{data.release_date}}</p>
-    <p class="movie__list_text">Rating {{data.vote_average}}</p>
-    <p class="movie__list_text">{{data.duration_of_the_movie | time}}</p>
-
-  </div>
-
-  <div class="movie__actions" *ngIf="!favorite && !watch">
-    <button class=" movie__list_more btn" (click)="seeMore()">More</button>
-    <button class="movie__active_favorite btn" (click)="addToFavorite()">Add to favorite</button>
-    <button class="movie__active_watch btn" (click)="addToWatch()">Add to watch list</button>
-  </div>
+  <p-card>
+    <img class="movie__list_image" alt="Card" src="{{data.backdrop_path}}" />
+    <div class="movie__info">
+      <h2 class="movie__list_title">{{data.title}}</h2>
+      <p class="movie__list_text overview">{{data.overview}}</p>
+      <p class="movie__list_text">Release {{data.release_date}}</p>
+      <p class="movie__list_text">Rating {{data.vote_average}}</p>
+      <p class="movie__list_text">{{data.duration_of_the_movie | time}}</p>
+    </div>
+    <div class="movie__actions">
+      <p-button styleClass="movie__list_more btn" label="More" [text]="true" [raised]="true" (click)="seeMore()" />
+      <p-button styleClass="btn" label="Add to Favorite List" [text]="true" [raised]="true" (click)="addToFavorite()" />
+      <p-button styleClass="btn" label="Add to Watch List" [text]="true" [raised]="true" (click)="addToWatch()" />
+    </div>
+  </p-card>
 </li>
