--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -7,7 +7,6 @@
   display: flex;
   flex-direction: column;
   justify-content: end;
-  background-color: rgba(0, 0, 0, 0.6);
   border-radius: 10px;
   border: 1px solid #ffffff;
   overflow: hidden;
@@ -20,33 +19,11 @@
   color: #ffffff;
   text-align: center;
   margin: 0 0 10px 0;
-}
-
-.btn {
-  color: silver;
-  border-radius: 10px;
-  margin-top: 10px;
-  border: 1px solid silver;
-  margin: 0;
-  cursor: pointer;
-  background-color: inherit;
-  transition: color 300ms ease;
-
-  &:hover {
-    color: #ffffff;
-    transition: color 300ms ease;
-  }
+  font-size: 24px;
+  white-space: nowrap;
 
   @media screen and (min-width:768px) {
-    padding: 5px 0;
-  }
-}
-
-.movie__list_title {
-  font-size: 18px;
-
-  @media screen and (min-width:768px) {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
@@ -75,8 +52,10 @@
 }
 
 .movie__info {
-  padding: 0 10px;
-  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 10px;
   border-radius: 10px;
   transition: height 300ms ease;
   height: 32%;
@@ -108,13 +87,22 @@
 }
 
 .more .movie__info {
-  position: relative;
+  position: absolute;
+  inset: 0;
   display: flex;
   flex-direction: column;
   z-index: 2;
-  height: 100%;
+  width: 100%;
+  height: 63%;
   gap: 10px;
   transition: height 300ms ease;
+  background-color: #1e1e1e;
+  padding: 35px 20px;
+  transition: height 300ms ease;
+}
+
+.more .movie__list_text {
+  display: none;
 }
 
 .overview {
@@ -123,6 +111,7 @@
 }
 
 .more .overview {
+  display: block;
   position: relative;
   z-index: 2;
 }
