--- a/src/app/components/movie-list/movie-list.component.html
+++ b/src/app/components/movie-list/movie-list.component.html
@@ -5,13 +5,23 @@
         <button class="movie__heart_btn" (click)="openFavoriteList()">
           <span class="count">{{movieFavorite.length}}</span>
           <svg class="movie__favorite_icon icon">
-            <use href="assets/images/symbol-defs.svg#icon-heart"></use>
+            <ng-container *ngIf="!favorite; else defaultHeart">
+              <use href="assets/images/symbol-defs.svg#heart"></use>
+            </ng-container>
+            <ng-template #defaultHeart>
+              <use href="assets/images/symbol-defs.svg#left"></use>
+            </ng-template>
           </svg>
         </button>
         <button class="movie__eye_btn" (click)="openWatchList()">
           <span class="count">{{moviesWatchList.length}}</span>
           <svg class="movie__watch_icon icon">
-            <use href="assets/images/symbol-defs.svg#icon-eye"></use>
+            <ng-container *ngIf="!watch; else defaultEye">
+              <use href="assets/images/symbol-defs.svg#eye"></use>
+            </ng-container>
+            <ng-template #defaultEye>
+              <use href="assets/images/symbol-defs.svg#right"></use>
+            </ng-template>
           </svg>
         </button>
       </div>
@@ -19,15 +29,13 @@
     <div class="movie__list_content" *ngIf="!favorite && !watch">
       <h2 class="title">Movie Trends</h2>
       <ul class="movie__list">
-        <app-movie-card *ngFor="let movie of movies" [data]="movie" (addFavorite)="handleAddToFavorite($event)"
+        <app-movie-card *ngFor="let movie of movies " [data]="movie" (addFavorite)="handleAddToFavorite($event)"
           (addWatch)="handleAddToWatchList($event)">
         </app-movie-card>
       </ul>
     </div>
-
     <div class="movie__favorite_list_content movie__list_content" [class.favorite]="favorite">
       <h2 class="title">Your Favorite List</h2>
-
       <ul class=" movie__list_favorite movie__list">
         <app-movie-card *ngFor="let movie of movieFavorite" [data]="movie" [favorite]="favorite"></app-movie-card>
       </ul>
