--- a/src/app/components/movie-list/movie-list.component.scss
+++ b/src/app/components/movie-list/movie-list.component.scss
@@ -1,7 +1,3 @@
-.wrapper {
-  background-color: #000000;
-}
-
 .container {
   margin: 0 auto;
   padding: 10px;
@@ -60,10 +56,6 @@
   transition: transform 300ms ease;
 }
 
-.movie__favorite_icon {
-  fill: red;
-}
-
 .icon:hover {
   transform: scale(1.1);
   transition: transform 300ms ease;
@@ -77,8 +69,8 @@
 .count {
   position: absolute;
   z-index: 2;
-  color: silver;
-  right: 7px;
+  color: #ffffff;
+  right: 2px;
   bottom: 0;
   transform: translateX(-50%);
 }
@@ -87,10 +79,9 @@
   max-width: 400px;
   margin: 2% auto;
   padding: 0 10px;
-  background-color: #000000;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  overflow-x: auto;
+  overflow: auto;
 
   padding: 10px 5px;
 
@@ -136,7 +127,7 @@
   position: absolute;
   z-index: -1;
   transform: translateX(-200%);
-  transition: transform 300ms ease;
+  transition: all 300ms ease;
 
   &.watch {
     position: relative;
